fixed alignment home

--- a/recipes/recipes.css
+++ b/recipes/recipes.css
@@ -1,6 +1,11 @@
 /* styles.css */
+* {
+    padding: 0px;
+    margin: 0px;
+}
+
 html {
-    width: 100% vw;
+    width: 100% ;
 }
 
 h1 {
@@ -17,7 +22,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: beige;
     border: 62px ridge lightcoral;
-    width: 100%;
+    width: 100% vw;
     display: flex;
     flex-direction: column;
 }
@@ -31,13 +36,13 @@ a {
 
 img {
     height: auto;
-    width: 650px;
+    width: 350px;
+    justify-content: center;
     align-content: center;
     border: 65px double #a4d1d59d;
-    margin-left: 21%;
 }
 
-ul li {
+ul {
     color:black;
     font-size: 20px;
     border-bottom: 25px rgb(69, 234, 234);
@@ -77,4 +82,11 @@ ol {
 ul {
     margin: 15px;
     display: flex;
+}
+
+li {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
 }
